project/stage/parse_tests/tests/reject/bad_programs/junk_before_first_func.ul
junk 123
void main() {

}
